--- a/pdf-extractor-api/image_enchance.ipynb
+++ b/pdf-extractor-api/image_enchance.ipynb
@@ -133,6 +133,78 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "        last_image_num = 0\n",
+    "        existing_images = [image for image in os.listdir(\"./l_img\") if image.startswith(\"line_\")]\n",
+    "        if existing_images:\n",
+    "            last_image = max(existing_images, key=lambda x: int(x.split(\"_\")[1].split(\".\")[0]))\n",
+    "            last_image_num = int(last_image.split(\"_\")[1].split(\".\")[0])\n",
+    "        # Increment the image number\n",
+    "        new_image_num = last_image_num + 1\n",
+    "        new_image_name = f\"./l_img/line_{new_image_num}.jpg\"\n",
+    "        \n",
+    "        # new_folder_path = f\"./l_img/line_{new_folder_num}.png\"\n",
+    "        print(\"lines image saved as -\",new_image_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 31) (402890820.py, line 31)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 31\u001b[0;36m\u001b[0m\n\u001b[0;31m    pdf_path = 'OCR_SANTOSH/291169012_suoypoa1rvi5puntbojalx12.pd\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 31)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import random\n",
+    "from pdf2image import convert_from_path\n",
+    "from PIL import Image\n",
+    "\n",
+    "def crop_random_images_from_pdf(pdf_path, output_dir, crop_size, num_images_per_page=10):\n",
+    "    # Convert PDF pages to images\n",
+    "    images = convert_from_path(pdf_path)\n",
+    "\n",
+    "    # Create output directory if it doesn't exist\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "    for page_num, image in enumerate(images):\n",
+    "        # Create a subdirectory for each page\n",
+    "        page_dir = os.path.join(output_dir, f\"page_{page_num + 1}\")\n",
+    "        os.makedirs(page_dir, exist_ok=True)\n",
+    "\n",
+    "        for i in range(num_images_per_page):\n",
+    "            # Randomly select a crop position within the image\n",
+    "            x = random.randint(0, image.width - crop_size[0])\n",
+    "            y = random.randint(0, image.height - crop_size[1])\n",
+    "\n",
+    "            # Crop the image based on the randomly selected position and size\n",
+    "            cropped_image = image.crop((x, y, x + crop_size[0], y + crop_size[1]))\n",
+    "\n",
+    "            # Save the cropped image\n",
+    "            image_path = os.path.join(page_dir, f\"image_{i + 1}.jpg\")\n",
+    "            cropped_image.save(image_path)\n",
+    "\n",
+    "# Example usage\n",
+    "pdf_path = 'OCR_SANTOSH/291169012_suoypoa1rvi5puntbojalx12.pd\n",
+    "output_dir = './output'\n",
+    "crop_size = (100, 100)  # Specify the range of width and height for cropped images\n",
+    "num_images_per_page = 10  # Number of random images to crop per page\n",
+    "\n",
+    "crop_random_images_from_pdf(pdf_path, output_dir, crop_size, num_images_per_page)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
