--- a/pdf-extractor-api/image_enchance.ipynb
+++ b/pdf-extractor-api/image_enchance.ipynb
@@ -149,25 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 31) (402890820.py, line 31)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 31\u001b[0;36m\u001b[0m\n\u001b[0;31m    pdf_path = 'OCR_SANTOSH/291169012_suoypoa1rvi5puntbojalx12.pd\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 31)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import random\n",
     "from pdf2image import convert_from_path\n",
     "from PIL import Image\n",
     "\n",
-    "def crop_random_images_from_pdf(pdf_path, output_dir, crop_size, num_images_per_page=10):\n",
+    "def crop_random_images_from_pdf(pdf_path, output_dir, min_crop_size, max_crop_size, num_images_per_page=10):\n",
     "    # Convert PDF pages to images\n",
     "    images = convert_from_path(pdf_path)\n",
     "\n",
@@ -180,24 +171,29 @@
     "        os.makedirs(page_dir, exist_ok=True)\n",
     "\n",
     "        for i in range(num_images_per_page):\n",
+    "            # Randomly select the crop size within the specified range\n",
+    "            crop_width = random.randint(min_crop_size, max_crop_size)\n",
+    "            crop_height = random.randint(min_crop_size, max_crop_size)\n",
+    "\n",
     "            # Randomly select a crop position within the image\n",
-    "            x = random.randint(0, image.width - crop_size[0])\n",
-    "            y = random.randint(0, image.height - crop_size[1])\n",
+    "            x = random.randint(0, image.width - crop_width)\n",
+    "            y = random.randint(0, image.height - crop_height)\n",
     "\n",
     "            # Crop the image based on the randomly selected position and size\n",
-    "            cropped_image = image.crop((x, y, x + crop_size[0], y + crop_size[1]))\n",
+    "            cropped_image = image.crop((x, y, x + crop_width, y + crop_height))\n",
     "\n",
     "            # Save the cropped image\n",
     "            image_path = os.path.join(page_dir, f\"image_{i + 1}.jpg\")\n",
     "            cropped_image.save(image_path)\n",
     "\n",
     "# Example usage\n",
-    "pdf_path = 'OCR_SANTOSH/291169012_suoypoa1rvi5puntbojalx12.pd\n",
+    "pdf_path = 'OCR_SANTOSH/291169012_suoypoa1rvi5puntbojalx12.pdf'\n",
     "output_dir = './output'\n",
-    "crop_size = (100, 100)  # Specify the range of width and height for cropped images\n",
+    "min_crop_size = 300  # Minimum width and height for cropped images\n",
+    "max_crop_size = 1000  # Maximum width and height for cropped images\n",
     "num_images_per_page = 10  # Number of random images to crop per page\n",
     "\n",
-    "crop_random_images_from_pdf(pdf_path, output_dir, crop_size, num_images_per_page)\n"
+    "crop_random_images_from_pdf(pdf_path, output_dir, min_crop_size, max_crop_size, num_images_per_page)\n"
    ]
   },
   {
@@ -206,6 +202,33 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "def is_completely_white(image_path):\n",
+    "    # Read the image using OpenCV\n",
+    "    image = cv2.imread(image_path)\n",
+    "\n",
+    "    # Convert the image to grayscale\n",
+    "    # gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    # Calculate the mean value of the grayscale image\n",
+    "    mean_value = np.mean(image)\n",
+    "    if mean_value == 255 or mean_value == 254:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "image_path = \"/home/ubuntu/ritesh_manchikanti/pdf-extractor-api/img/borderless_table/image10.png\"\n",
+    "is_white = is_completely_white(image_path)\n",
+    "print(\"Is completely white:\", is_white)"
+   ]
   }
  ],
  "metadata": {
