--- a/Bigbird/extract_results.ipynb
+++ b/Bigbird/extract_results.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "\n",
-    "filename = \"./ddp/final_results.txt\"  # Replace with the actual filename\n",
+    "filename = \"./ddp_2/final_results.txt\"  # Replace with the actual filename\n",
     "label_list = []\n",
     "true_list = []\n",
     "predicted_list = []\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "[]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m total_samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(true_list)\n\u001b[1;32m      2\u001b[0m correct_predictions \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m true, pred \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(true_list, predicted_list) \u001b[38;5;28;01mif\u001b[39;00m true \u001b[38;5;241m==\u001b[39m pred)\n\u001b[0;32m----> 3\u001b[0m accuracy \u001b[38;5;241m=\u001b[39m (\u001b[43mcorrect_predictions\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtotal_samples\u001b[49m) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maccuracy\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m total_samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(true_list)\n\u001b[1;32m      2\u001b[0m correct_predictions \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m true, pred \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(true_list, predicted_list) \u001b[38;5;28;01mif\u001b[39;00m true \u001b[38;5;241m==\u001b[39m pred)\n\u001b[0;32m----> 3\u001b[0m accuracy \u001b[38;5;241m=\u001b[39m (\u001b[43mcorrect_predictions\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtotal_samples\u001b[49m) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maccuracy\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
     "\n",
     "filename = \"./savedmodel_2/new_df_results.txt\" \n",
     "# Replace with the actual filename\n",
-    "filename = \"./ddp/final_results.txt\"\n",
+    "filename = \"./ddp_2/final_results.txt\"\n",
     "label_list = []\n",
     "true_list = []\n",
     "predicted_list = []\n",
@@ -117,20 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 84.36%\n"
+      "Accuracy: 100.00%\n"
      ]
     }
    ],
    "source": [
-    "total_samples = len(level_1_true)\n",
-    "correct_predictions = sum(1 for true, pred in zip(level_1_true, level_1_pred) if true == pred)\n",
+    "total_samples = len(level_3_true)\n",
+    "correct_predictions = sum(1 for true, pred in zip(level_3_true, level_3_pred) if true == pred)\n",
     "accuracy = (correct_predictions / total_samples) * 100\n",
     "\n",
     "print(f\"Accuracy: {accuracy:.2f}%\")"
@@ -145,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 84.59%\n"
+      "Accuracy: 85.29%\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -167,8 +167,8 @@
      "output_type": "stream",
      "text": [
       "              Predicted Label 1  Predicted Label 2  Predicted Label 3\n",
-      "True Label 1                755                120                 20\n",
-      "True Label 2                 13                 91                  2\n",
+      "True Label 1                745                118                 17\n",
+      "True Label 2                  8                 91                  2\n",
       "True Label 3                  0                  0                  5\n"
      ]
     }
