downloaded language_tool

--- a/pdf-extractor-api/img_2_table.ipynb
+++ b/pdf-extractor-api/img_2_table.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -149,14 +149,8 @@
       " Found FMA\n",
       " Found SSE\n",
       " Found libarchive 3.4.0 zlib/1.2.11 liblzma/5.2.4 bz2lib/1.0.8 liblz4/1.9.2 libzstd/1.4.4\n",
-      "[\n",
-      "    {\n",
-      "        \"Platelet Count\":\"Mean Platelet Volume\",\n",
-      "        \"237.0\":7.6,\n",
-      "        \"thou\\/mm3\":\"fL\",\n",
-      "        \"150.00 - 410.00\":\"6.5 - 12.0\"\n",
-      "    }\n",
-      "]\n"
+      "         Platelet Count  237.0 thou/mm3 150.00 - 410.00\n",
+      "0  Mean Platelet Volume    7.6       fL      6.5 - 12.0\n"
      ]
     }
    ],
@@ -174,8 +168,8 @@
     "    # We can also create an excel file with the tables\n",
     "    img.to_xlsx('./tables.xlsx', ocr=ocr)\n",
     "    df = pd.read_excel('./tables.xlsx')\n",
-    "    json_data = df.to_json(orient='records', indent=4)\n",
-    "    return json_data\n",
+    "    # json_data = df.to_json(orient='records', indent=4)\n",
+    "    return df\n",
     "\n",
     "# Example usage:\n",
     "image_path = \"./table_ss.png\"\n",
@@ -186,53 +180,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'img_tables' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mimg_tables\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'img_tables' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img_tables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 4)\n",
-      "2, 4\n",
-      "Number of Rows: 2\n",
-      "Number of Columns: 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "table_info = \"Units, bbox=(31, 72, 1924, 281),shape=(2, 4)\"\n",
+    "from img2table.document import Image\n",
+    "from img2table.ocr import TesseractOCR\n",
+    "import pandas as pd\n",
+    "from PIL import Image as PILImage\n",
     "\n",
-    "# Extract the shape from the string\n",
-    "shape_str = table_info.split(\"shape=\")[1]\n",
-    "print(shape_str)\n",
-    "shape_str = shape_str.strip(\")\").replace(\"(\", \"\")\n",
-    "print(shape_str)\n",
-    "num_rows, num_cols = map(int, shape_str.split(\", \"))\n",
+    "def extract_table_with_titles(image_path, bounding_box):\n",
+    "    # Instantiation of the image\n",
+    "    img = Image(src=image_path)\n",
     "\n",
-    "print(\"Number of Rows:\", num_rows)\n",
-    "print(\"Number of Columns:\", num_cols)"
+    "    # Open the image with PIL\n",
+    "    pil_img = PILImage.open(image_path)\n",
+    "\n",
+    "    # Crop the image based on the bounding box\n",
+    "    x, y, w, h = bounding_box\n",
+    "    img_cropped_pil = pil_img.crop((x, y, x + w, y + h))\n",
+    "\n",
+    "    # Convert the cropped PIL image to img2table.document.Image\n",
+    "    img_cropped = Image(pil_image=img_cropped_pil)\n",
+    "    ocr = TesseractOCR(lang=\"eng\")\n",
+    "    # Table identification and extraction\n",
+    "    img_tables = img_cropped.extract_tables(ocr=ocr)\n",
+    "\n",
+    "    if img_tables is not None and len(img_tables) > 0:\n",
+    "        # Get the first table (you can iterate through all tables if needed)\n",
+    "        table = img_tables[0]\n",
+    "\n",
+    "        # Convert the extracted table data to DataFrame\n",
+    "        table_data = []\n",
+    "        for row in range(table.shape[0]):\n",
+    "            row_data = []\n",
+    "            for col in range(table.shape[1]):\n",
+    "                bbox = (\n",
+    "                    table.bbox.x1 + col * table.bbox.x2 // table.shape[1],\n",
+    "                    table.bbox.y1 + row * table.bbox.y2 // table.shape[0],\n",
+    "                    table.bbox.x2 // table.shape[1],\n",
+    "                    table.bbox.y2 // table.shape[0]\n",
+    "                )\n",
+    "                cell_text = ocr_text(img_cropped, bbox)\n",
+    "                row_data.append(cell_text)\n",
+    "            table_data.append(row_data)\n",
+    "\n",
+    "        # Convert the table data to a DataFrame\n",
+    "        df = pd.DataFrame(table_data)\n",
+    "\n",
+    "        # Read the table titles from the image above the table\n",
+    "        titles_data = []\n",
+    "        for col in range(table.shape[1]):\n",
+    "            title_bbox = (\n",
+    "                table.bbox.x1 + col * table.bbox.x2 // table.shape[1],\n",
+    "                table.bbox.y1 - h,  # Assuming the titles are above the table\n",
+    "                table.bbox.x2 // table.shape[1],\n",
+    "                h\n",
+    "            )\n",
+    "            title_text = ocr_text(img_cropped, title_bbox)\n",
+    "            titles_data.append(title_text)\n",
+    "\n",
+    "        # Add the titles as the DataFrame column names\n",
+    "        df.columns = titles_data\n",
+    "\n",
+    "        return df\n",
+    "\n",
+    "    return None\n",
+    "\n",
+    "# Example usage:\n",
+    "image_path = \"./table_ss.png\"\n",
+    "bounding_box = (31, 72, 1924, 281)\n",
+    "result = extract_table_with_titles(image_path, bounding_box)\n",
+    "print(result)\n"
    ]
   },
   {
